objects/Product_Specifications__c.object
<CustomObject>
    <fields>
        <fullName>Area_SQ_Feet__c</fullName>
        <label>Sq. Feet</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <description>Please indicate the client budget for this project</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Product Specifications</relationshipLabel>
        <relationshipName>Product_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Start_Date__c</fullName>
        <label>Construction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DECISION MAKER</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Specifications</relationshipLabel>
        <relationshipName>Product_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please provide any specifics provided for the space. For example, internal stairways, outdoor patio, etc.</inlineHelpText>
        <label>Description of Space</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Buid_Close_Date__c</fullName>
        <label>D/B Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_e_Furniture_or_Branding__c</fullName>
        <description>Please Describe Any Offering or Deviation: (Includes Sub-Categories (Furniture or Branding)</description>
        <inlineHelpText>Please Describe Any Offering or Deviation: (Includes Sub-Categories (Furniture or Branding)</inlineHelpText>
        <label>Design (Furniture or Branding)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Envision_Close_Date__c</fullName>
        <label>Envision Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Envision_Deliverable_Date__c</fullName>
        <label>Envision Deliverable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Envision_Start_Date__c</fullName>
        <label>Envision Kick-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Per_Credit__c</fullName>
        <label>Fee per Credit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Per_Membership__c</fullName>
        <label>Fee per Membership</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <label>Floors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-100</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>B5</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Product Specifications</relationshipLabel>
        <relationshipName>Product_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Groups__c</fullName>
        <inlineHelpText>Functional groups
Please provide the types of work groups that will occupy the space. For example, finance, IT, product development, sales, traders, executives, etc.</inlineHelpText>
        <label>Functional Groups</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Notes_or_Requirements__c</fullName>
        <description>general comments or description of the space</description>
        <inlineHelpText>Please record any general comments or description of the space</inlineHelpText>
        <label>General Notes or Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Growth_Potential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Growth Potential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Budget_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please indicate that the client has an approved budget.</inlineHelpText>
        <label>Approved Budget?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_IT_Sec_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>May require CIO, IT, Security approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date__c</fullName>
        <label>Lease Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Main_Location_User_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Location of usage for User Group</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Product Specifications (Main Location of usage for User Group)</relationshipLabel>
        <relationshipName>Product_Specifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Location of usage for DM</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Product Specifications</relationshipLabel>
        <relationshipName>Product_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Move_In_Date_1__c</fullName>
        <inlineHelpText>Please enter date client will move in employees</inlineHelpText>
        <label>Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_In_Date_2__c</fullName>
        <inlineHelpText>If phased move in, please enter Phase 2 move in</inlineHelpText>
        <label>Phase 2 Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_In_Date_3__c</fullName>
        <inlineHelpText>If phased moved in, please enter Phase 3 move in date</inlineHelpText>
        <label>Phase 3 Move on Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_In_Notes_1__c</fullName>
        <inlineHelpText>Please detail the number of people, functional groups and other relevant details.</inlineHelpText>
        <label>Move in Date Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Move_In_Notes_2__c</fullName>
        <inlineHelpText>Please detail the number of people, functional groups and other relevant details.</inlineHelpText>
        <label>Phase 2 Move in Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Move_In_Notes_3__c</fullName>
        <inlineHelpText>Please detail the number of people, functional groups and other relevant details.</inlineHelpText>
        <label>Phase 3 Move in Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Credits_Per_Member__c</fullName>
        <label># of Credits per Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <inlineHelpText>Please provide number of employees to be located within space.</inlineHelpText>
        <label>Number of Employees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Floors__c</fullName>
        <label>Number of Floors</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Memberships__c</fullName>
        <label>No. Memberships (Gross, Net, New, etc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operate_Close_Date__c</fullName>
        <label>Operate Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operational__c</fullName>
        <description>Please Describe Any Operational Offering or Deviation from Standards</description>
        <inlineHelpText>Please Describe Any Operational Offering or Deviation from Standards</inlineHelpText>
        <label>Operational</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parties_Involved__c</fullName>
        <label>Parties Involved (Broker, Client Rep)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <description>Please Describe Any Offering or Deviation: Includes Sub-Categories (Acoustics, Vinyl, Space Analytics)</description>
        <inlineHelpText>Please Describe Any Offering or Deviation: Includes Sub-Categories (Acoustics, Vinyl, Space Analytics)</inlineHelpText>
        <label>Performance (Acoustic,Vinyl,Analytics)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Role__c</fullName>
        <description>Primary_Member_Role</description>
        <label>Primary Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Address_Street__c</fullName>
        <inlineHelpText>If space has not been identified yet provide the city and state.</inlineHelpText>
        <label>Project Address (Street)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <label>Project City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Country__c</fullName>
        <label>Project Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Requirements__c</fullName>
        <inlineHelpText>Please provide a brief description of request from the customer. For example, the client may request a mixture of conference rooms, gathering places, phone booths, auditorium, etc.</inlineHelpText>
        <label>Desc. of customer intentions for space</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <label>Project State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Zip__c</fullName>
        <label>Project Zip/Postal</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms__c</fullName>
        <label>Renewal Terms</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rentable_SqFeet__c</fullName>
        <label>Rentable Square Feet (RSF)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Description__c</fullName>
        <label>Solution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <description>Describe Any Offering or Deviation: Includes Sub-Categories (Work, Meet, We, Serve)</description>
        <inlineHelpText>Please Describe Any Offering or Deviation: Includes Sub-Categories (Work, Meet, We, Serve)</inlineHelpText>
        <label>Space</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Systems_Security_IT_A_V__c</fullName>
        <description>Please Describe Any Offering or Deviation: Includes Sub-Categories (Security, IT, A/V)</description>
        <inlineHelpText>Please Describe Any Offering or Deviation: Includes Sub-Categories (Security, IT, A/V)</inlineHelpText>
        <label>Systems (Security, IT, A/V)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Term_In_Month__c</fullName>
        <label>Term Length of Membership (Months)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terms_Of_Contract__c</fullName>
        <label>Term of Contract</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-Level</fullName>
                </value>
                <value>
                    <fullName>Department Head</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Middle Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unspecified_SqFeet__c</fullName>
        <label>Square Feet (Unspecified)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usable_SqFeet__c</fullName>
        <label>Usable Square Feet (USF)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City as a Campus</fullName>
                </value>
                <value>
                    <fullName>Remote Working</fullName>
                </value>
                <value>
                    <fullName>Hosting Customer Meetings</fullName>
                </value>
                <value>
                    <fullName>Marketing Space</fullName>
                </value>
                <value>
                    <fullName>Executive Travel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Group__c</fullName>
        <label>User Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeOS_Close_Date__c</fullName>
        <label>WeOS Close Date</label>
        <type>Date</type>
    </fields>
    <label>Product Specifications</label>
    <nameField>
        <label>Product Specifications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Custom_Office</fullName>
        <active>true</active>
        <label>Custom Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Access</fullName>
        <active>true</active>
        <label>Global Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>PxWe</fullName>
        <active>true</active>
        <label>PxWe</label>
    </recordTypes>
</CustomObject>